--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,14 +19,14 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>springDispatcherServlet</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
-  <filter>
+ <!--  <filter>
   	<filter-name>XSSEscapeFilter</filter-name>
   	<filter-class>com.yisi.back.interceptor.XSSEscapeFilter</filter-class>
   </filter>
   <filter-mapping>
   	<filter-name>XSSEscapeFilter</filter-name>
   	<url-pattern>/*</url-pattern>
-  </filter-mapping>
+  </filter-mapping> -->
 </web-app>
